# fastapi-getpaid

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
docs/: api.md  changelog.md  conf.py  configuration.md  index.md  quickstart.md
example/: README.md  app.py  example.db  models.py  paywall.py  pyproject.toml
example/templates/: 404.html  base.html  home.html  order_detail.html  paywall_gateway.html  result.html
src/fastapi_getpaid/: __init__.py  config.py  dependencies.py  exceptions.py  protocols.py  registry.py  retry.py  router.py  schemas.py
src/fastapi_getpaid/contrib/: __init__.py
src/fastapi_getpaid/contrib/sqlalchemy/: __init__.py  models.py  repository.py  retry_store.py
src/fastapi_getpaid/routes/: __init__.py  callbacks.py  payments.py  redirects.py
tests/: conftest.py  test_config.py  test_contrib_sqlalchemy_models.py  test_contrib_sqlalchemy_repository.py  test_contrib_sqlalchemy_retry_store.py  test_dependencies.py  test_exceptions.py  test_integration.py  test_protocols.py  test_public_api.py  test_registry.py  test_retry.py  test_router.py  test_routes_callbacks.py  test_routes_payments.py  test_routes_redirects.py  test_schemas.py
