[project]
name = "fastapi-getpaid-example"
version = "0.0.0"
description = "Example application for fastapi-getpaid with multiple payment backends"
requires-python = ">=3.12"
dependencies = [
    "python-getpaid-core @ file:///home/minder/projekty/python-getpaid/getpaid-core",
    "fastapi-getpaid[sqlalchemy] @ file:///home/minder/projekty/python-getpaid/fastapi-getpaid",
    "python-getpaid-payu @ file:///home/minder/projekty/python-getpaid/getpaid-payu",
    "python-getpaid-paynow @ file:///home/minder/projekty/python-getpaid/getpaid-paynow",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

